--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,6 @@
         width: 80%;
         max-width: 1170px;
         margin: auto;
-
     }
 
     .d-flex {
@@ -40,7 +39,7 @@
     body {
         font-family: 'Open Sans', sans-serif;
         font-size: 12px;
-        min-width: 1200px;
+        min-width: 1100px;
     }
 
     button {
@@ -101,7 +100,7 @@
 /* #region Hero Image */
 
     .heroimg-container {
-        height: 400px;
+        height: 500px;
         background-color: var(--bg-heroimg);
     }
 
@@ -110,23 +109,43 @@
     }
 
     .heroimg-title {
-        width: 100%;
+        width: 80%;
         padding-top: 50px;
         padding-bottom: 30px;
         font-size: 32px;
     }
 
     .heroimg-par {
-        width: calc(100% /12 *4);
+        width: calc(100% /12 *3);
+    }
+
+    .free-btn {
+        margin: 20px 0;
+        padding: 8px 16px;
+    }
+
+    .cancel {
+        padding-bottom: 30px;
+    }
+
+    .arrow {
+        font-size: 30px;
     }
 
     .heroimg-img {
-        width: calc(100% /12 *8);
+        width: calc(100% /12 *9);
     }
 
     .heroimg-img img {
         width: 90%;
-        
+        max-width: 650px;
     }
 
 /* #endregion Hero Image */
+
+
+/* #region Piano business */
+
+
+
+/* #endregion Piano business */
