--- a/css/style.css
+++ b/css/style.css
@@ -8,17 +8,22 @@
     }
 
     :root {
-
         --bg-btn: #0061ff;
         --bg-heroimg: #b4d0e7;
         --txt-dark: black;
         --txt-light: white;
-        
+        --light-grey: #dfdfe1;
     }
 
     .container {
         width: 80%;
         max-width: 1170px;
+        margin: auto;
+    }
+
+    .container2 {
+        width: 70%;
+        max-width: 1100px;
         margin: auto;
     }
 
@@ -146,6 +151,51 @@
 
 /* #region Piano business */
 
+    .bsn-title {
+        padding-top: 100px;
+        padding-bottom: 20px;
+        font-size: 20px;
+    }
 
+    .radio-btn {
+        padding-bottom: 40px;
+    }
+
+    #annuale {
+        margin-left: 30px;
+    }
+
+    .card-container {
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .bsn-card {
+        width: calc(100% /12 *3.6);
+    }
+
+    .bsn-card-title {
+        text-align: center;
+        padding: 10px 0 ;
+    }
+
+    .bsn-card-title, .bsn-card-body {
+        border-top: 1px solid var(--light-grey);
+        border-left: .5px solid var(--light-grey);
+        border-right: .5px solid var(--light-grey);
+    }
+
+    .bsn-card-body {
+        border-bottom: 1px solid var(--light-grey);
+    }
+
+    .bsn-card-body ul {
+        list-style: none;
+    }
+
+    .bsn-card-body hr {
+        width: 30%;
+        margin-left: 10px;
+    }
 
 /* #endregion Piano business */
