--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,10 @@
         padding-right: 1rem;
     }
 
+    .p-rel {
+        position: relative;
+    }
+
     body {
         font-family: 'Open Sans', sans-serif;
         font-size: 12px;
@@ -169,34 +173,36 @@
     .card-container {
         align-items: flex-start;
         justify-content: space-between;
-        padding: 20px 0;;
+        flex-wrap: wrap;
+        padding: 20px 0;
     }
 
     .bsn-card {
         width: calc(100% /12 *3.6);
     }
 
-    .bsn-car2 {
+    .bsn-card2 {
         width: 100%;
+        padding-top: 20px;
     }
 
     .bsn-card-title {
         text-align: center;
-        padding: 10px 0 ;
+        padding: 10px 0;
     }
 
-    .bsn-card-title, .bsn-card-body {
+    .bsn-card-title, .bsn-card-body, .bsn-card-body2 {
         border-top: 2px solid var(--light-grey);
         border-left: 1px solid var(--light-grey);
         border-right: 1px solid var(--light-grey);
     }
 
-    .bsn-card-body {
+    .bsn-card-body, .bsn-card-body2 {
         padding: 20px 20px;
         border-bottom: 2px solid var(--light-grey);
     }
 
-    .price {
+    .bsn-card-body .price {
         padding: 10px 0;
     }
 
@@ -209,9 +215,11 @@
         padding-top: 10px;
     }
 
-    .bsn-card-body button {
+    .bsn-card-body .btn {
         margin: 20px 0;
-        padding: 10px 20px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        width: 100%;
     }
 
     .bsn-card-body hr {
@@ -222,6 +230,26 @@
 
     .bsn-card-body .fa-check {
         color: var(--txt-check)
+    }
+    
+    .bsn-card-body2 .col1 {
+        width:  calc(100% /12 * 8);
+    }
+
+    .bsn-card-body2 .col2 {
+        width: calc(100% /12 * 4);
+        justify-content: flex-end;
+        align-items: flex-start;
+    }
+
+    .bsn-card-body2 .ufficio-vendite {
+        padding: 10px 0;
+        padding-bottom: 30px;
+    }
+
+    .bsn-card-body2 .btn2 {
+        padding-top: 10px;
+        padding-bottom: 10px;
     }
 
 
