sezione clienti terminata

--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,11 @@
         --bg-arizona: #61082b;
         --bg-florida: #0093ce;
         --bg-topps: #ff1c1c;
+        --bg-bicycle: #d5001f;
+        --bg-hearst: #b4d0e7;
+        --bg-lonely: #0d2481;
+        --bg-clear: #ffd830;
+        --bg-designit-quote: #f5f5f5;
     }
 
     .container {
@@ -351,7 +356,7 @@
     }
     
     .clients-item {
-        width: calc(100% / 12 * 4)
+        width: calc(100% / 12 * 4);
     }
 
     .clients-item.lateral {
@@ -366,11 +371,13 @@
     }
 
     .clients-card img {
-        width: 80%;
+        width: 70%;
+        filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(162deg) brightness(101%) contrast(104%);
     }
 
     .clients-card.designit {
         background-color: var(--bg-designit);
+        border: 10px solid var(--bord-designit);
     }
 
     .clients-card.arizona {
@@ -385,9 +392,33 @@
         background-color: var(--bg-topps);
     }
 
+    .clients-card.bicycle {
+        background-color: var(--bg-bicycle);
+    }
 
+    .clients-card.hearst {
+        background-color: var(--bg-hearst);
+    }
 
+    .clients-card.lonely {
+        background-color: var(--bg-lonely);
+    }
 
+    .clients-card.clear {
+        background-color: var(--bg-clear);
+    }
+
+    .clients-item.designit-quote {
+        aspect-ratio: 1;
+        padding: 30px;
+        background-color: var(--bg-designit-quote);
+    }
+
+    .designit-logo img {
+        width: 60%;
+        padding-bottom: 40px;
+    }
+    
 /* #endregion Icone clienti */
 
 
