--- a/css/style.css
+++ b/css/style.css
@@ -8,13 +8,13 @@
     }
 
     :root {
-        --bg-btn: #0061ff;
-        --bg-heroimg: #b4d0e7;
-        --bg-btn-light: white;
-        --txt-dark: black;
-        --txt-light: white;
-        --txt-check: #0c64ff;
+        --light: white;
+        --dark: black;
         --light-grey: #dfdfe1;
+        --bg-btn: #0061ff;
+        --bg-btn-light: #478cfa;
+        --bg-heroimg: #b4d0e7;
+        --txt-check: #0c64ff;
         --bg-designit: #a2d39b;
         --bord-designit: #d1e9cd;
         --bg-arizona: #61082b;
@@ -37,7 +37,11 @@
         position: sticky;
         top: 0;
         left: 0;
-        background-color: var(--bg-btn-light);
+        background-color: var(--light);
+    }
+
+    footer {
+        background-color: var(--dark);
     }
 
 /* #endregion Common */
@@ -77,9 +81,14 @@
     .a-btn {
         display: inline-block;
         background-color: var(--bg-btn);
-        color: var(--txt-light);
+        color: var(--light-grey);
         text-decoration: none;
         padding: 5px 15px;
+    }
+
+    .a-btn:hover {
+        background-color: var(--bg-btn-light);
+        color: var(--light);
     }
 
 /* #endregion Utilities */
@@ -117,7 +126,7 @@
     .h-container .links a {
         display: inline-block;
         text-decoration: none;
-        color: var(--txt-dark);
+        color: var(--dark);
         padding: 16px 14px;
     }
 
@@ -299,9 +308,9 @@
     }
 
     .par .a-btn {
-        background-color: var(--bg-btn-light);
-        color: black;
-        border: 1px solid var(--txt-dark);
+        background-color: var(--light);
+        color: var(--dark);
+        border: 1px solid var(--dark);
         padding: 10px 20px;
         box-shadow: -1px 0px 0px 1px;
     }
@@ -445,8 +454,8 @@
     }
 
     .porta-dropbox-cont .a-btn {
-        background-color: var(--bg-btn-light);
-        color: var(--txt-dark);
+        background-color: var(--light);
+        color: var(--dark);
     }
 
 /* #endregion Porta Dropbox  */
@@ -465,8 +474,8 @@
     .faq-container {
         padding: 40px 0;
         padding-right: 20px;
-        border-top: 1px solid var(--txt-dark);
-        border-bottom: 1px solid var(--txt-dark);
+        border-top: 1px solid var(--dark);
+        border-bottom: 1px solid var(--dark);
     }
 
     .question {
@@ -483,5 +492,62 @@
         display: block;
     }
 
+    .fa-chevron-up {
+        display: none;
+    }
+
+    .faq-container:hover .fa-chevron-down {
+        display: none;
+    }
+
+    .faq-container:hover .fa-chevron-up {
+        display: block;
+    }
+
 /* #endregion FAQ  */
 
+/* #region Footer  */
+
+    .f-container {
+        color: var(--light);
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+
+    .f-item {
+        width: calc(100% /12 * 2);
+        padding: 50px 0;
+    }
+
+    .f-item ul {
+        list-style: none;
+        padding-top: 20px;
+    }
+
+    .f-item li {
+        padding-top: 10px;
+    }
+
+    .f-item a {
+        color: var(--light);
+        text-decoration: none;
+    }
+
+    .f-item a:hover {
+        text-decoration: underline;
+    }
+
+    .language {
+        width: 100%;
+        padding-bottom: 40px;
+        color: var(--light);
+    }
+
+    .language hr {
+        width: 15%;
+        margin: 20px 0;
+        margin-left: 0px;
+        color: var(--light);
+    }
+
+/* #endregion Footer  */
