--- a/css/style.css
+++ b/css/style.css
@@ -312,7 +312,11 @@
         color: var(--dark);
         border: 1px solid var(--dark);
         padding: 10px 20px;
-        box-shadow: -1px 0px 0px 1px;
+    }
+
+    .par .a-btn:hover {
+        background-color: var(--dark);
+        color: var(--light);
     }
 
 /* #endregion Partner Dropbox */
@@ -456,6 +460,11 @@
     .porta-dropbox-cont .a-btn {
         background-color: var(--light);
         color: var(--dark);
+    }
+
+    .porta-dropbox-cont .a-btn:hover {
+        background-color: var(--dark);
+        color: var(--light);
     }
 
 /* #endregion Porta Dropbox  */
