--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@
         --bg-heroimg: #b4d0e7;
         --txt-check: #0c64ff;
         --bg-designit: #a2d39b;
+        --bord-designit: #d1e9cd;
         --bg-arizona: #61082b;
         --bg-florida: #0093ce;
         --bg-topps: #ff1c1c;
@@ -401,7 +402,7 @@
 
     .clients-card img {
         width: 70%;
-        filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(162deg) brightness(101%) contrast(104%);
+        filter: invert(1);
     }
 
     .clients-card.designit {
