--- a/css/style.css
+++ b/css/style.css
@@ -642,8 +642,29 @@
     .login-container {
         width: 50%;
         margin: auto;
-        padding: 200px 0;
-        background-color: orange;
+        padding: 100px 0;
+        background-color: lightgrey;
+        justify-content: center;
+    }
+
+    .login-container .btn {
+        padding-bottom: 30px;
+    }
+
+    .login-container button {
+        width: 300px;
+        padding: 5px;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .login-container input {
+        margin-bottom: 30px;
+    }
+
+    .login-container input {
+        width: 300px;
+        height: 30px;
     }
 
     .google-btn img {
