--- a/css/style.css
+++ b/css/style.css
@@ -643,8 +643,12 @@
         width: 50%;
         margin: auto;
         padding: 100px 0;
-        background-color: lightgrey;
         justify-content: center;
+        border: 1px solid black;
+    }
+
+    .login-container .text {
+        padding-bottom: 10px;
     }
 
     .login-container .btn {
@@ -653,18 +657,14 @@
 
     .login-container button {
         width: 300px;
-        padding: 5px;
         align-items: center;
         justify-content: center;
     }
     
     .login-container input {
-        margin-bottom: 30px;
-    }
-
-    .login-container input {
         width: 300px;
         height: 30px;
+        margin-bottom: 30px;
     }
 
     .google-btn img {
@@ -674,6 +674,27 @@
     .apple-btn img {
         width: 30px;
     }
+
+    .line {
+        align-items: center;
+        position: relative;
+        margin: 40px 0;
+    }
+
+    .line hr {
+        width: 100%;    
+    }
+
+    .line div {
+        background-color: var(--light);
+        width: 40px;
+        height: 20px;
+        text-align: center;
+        position: absolute;
+        left: 50%;
+        transform: translatex(-50%);
+    }
+
 
 
 
