--- a/css/style.css
+++ b/css/style.css
@@ -661,6 +661,7 @@
         padding: 5px;
         background-color: var(--light);
         transition: background-color 300ms;
+        font-weight: bold;
     }
 
     .login-container .btn.google {
@@ -688,16 +689,11 @@
     .login-container .btn div {
         width: calc(100% /12*11);
     }
-    
-    .login-container input {
-        height: 30px;
-        margin-bottom: 30px;
-    }
 
     .login-container .line {
         align-items: center;
         position: relative;
-        margin: 40px 0;
+        padding: 40px 0;
     }
 
     .line hr {
@@ -706,8 +702,7 @@
 
     .line div {
         background-color: var(--light);
-        width: 40px;
-        height: 20px;
+        padding: 4px 5px;
         text-align: center;
         position: absolute;
         left: 50%;
@@ -720,11 +715,16 @@
         padding-bottom: 10px;
     }
 
+    .login-container input {
+        height: 40px;
+        margin-bottom: 30px;
+    }
+
     .login-container .continua {
         background-color: #0061fe;
         color: var(--light);
         font-weight: bold;
-        padding: 10px;
+        height: 40px;
         border: none;
     }
 
